# ComplexNumber

./: ComplexNumber.py  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test_ComplexNumber.py  tox.ini
.github/workflows/: pylint.yml  tests.yml
cnumber/: __init__.py  cnumber.py  exception.py
tests/: test_cnumber.py
